# translatorrr

./: ARCHITECTURE.md  README.md  pyproject.toml
src/rpg_translator/: __init__.py
src/rpg_translator/app/: __init__.py  main.py
src/rpg_translator/config/: __init__.py  defaults.toml  loader.py  profiles.py  schema.py
src/rpg_translator/core/: __init__.py  errors.py  events.py  models.py  paths.py  project.py
src/rpg_translator/gui/: __init__.py
src/rpg_translator/gui/views/: __init__.py
src/rpg_translator/gui/widgets/: __init__.py
src/rpg_translator/logging/: __init__.py  gui_sink.py  setup.py
src/rpg_translator/memory/: __init__.py
src/rpg_translator/output/: __init__.py
src/rpg_translator/providers/: __init__.py  base.py  http_json.py  lm_studio.py  ollama.py  openai.py  openai_compatible.py  registry.py
src/rpg_translator/rpgmaker/: __init__.py  detector.py  file_registry.py  json_loader.py
src/rpg_translator/rpgmaker/extractors/: __init__.py  base.py  common_events.py  database.py  maps.py  registry.py  system.py  troops.py
src/rpg_translator/rpgmaker/parsers/: __init__.py  event_commands.py
src/rpg_translator/translation/: __init__.py  pipeline.py  placeholderizer.py
tests/: __init__.py
tests/fixtures/rpg_project_mv/: Game.rpgproject
tests/fixtures/rpg_project_mv/data/: Actors.json  Armors.json  Classes.json  (+10 more)
tests/integration/: test_translation_pipeline.py
tests/unit/: test_config_loader.py  test_event_command_parser.py  test_extraction.py  test_logging_setup.py  test_models.py  test_placeholderizer.py  test_project_detector.py
