[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rpg-maker-translator"
version = "0.1.0"
description = "Desktop translation tooling for RPG Maker MV/MZ games."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "RPG Maker Translator contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
gui = [
  "PySide6>=6.7"
]
providers = [
  "httpx>=0.27"
]

[project.scripts]
rpg-maker-translator = "rpg_translator.app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rpg_translator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

